--- a/story/005f-test.html
+++ b/story/005f-test.html
@@ -63,10 +63,15 @@
   </div>
   <div class="info" id="info" style="z-index: 999; position: fixed; width:100%; bottom:0; text-align: center; margin:2em auto; font-family:'Circular Std', Helvetica, serif; font-size:16px; letter-spacing:0px;">
     <p style="font-weight:800; margin: 0;">
-      The inner solar system, including the asteroid belt. 
+      Numbered asteroids in the solar system.
+    <p style="font-weight:100; margin: 0;">
+      Every numbered asteroid in the solar system is shown here.
     </p>
     <p style="font-weight:100; margin: 0;">
       Potentially hazardous asteroids, objects that could pose a threat to earth, are marked in red.
+    </p>
+    <p style="font-weight:100; margin: 0;">
+      Give it some time to load.
     </p>
     <p style="font-weight:100; margin: 0;">
       <br>
@@ -84,16 +89,10 @@
   var paddingW = w/10,
       paddingH = h/10;
 
-  var number  = 1000;
-  var n = 400;
+  var number  = 0;
+  var n = 0;
 
-  var day = 5902;
-
-  function degree(x) {
-    return x - Math.floor(x/360.0)*360.0;
-  }
-
-  var enlarge = 200;
+  var enlarge = 300;
 
   // COLORS    
   // var designerBlack = d3.rgb("#12141A"), // Define a nice black color for the background, store it as var
@@ -121,8 +120,8 @@
   var canvas = d3.select("#canvas-wrapper").append("canvas")
                              .attr("id","container")
                              .attr("class","container")
-                             .attr("width", w)
-                             .attr("height", h);
+                             .attr("width", w*6)
+                             .attr("height", h*8);
 
   var context = canvas.node().getContext('2d');
 
@@ -161,13 +160,6 @@
   // .transition().duration( function() { return Math.random() * (5000 - 2000) + 2000})
   // .style("opacity", 1);
 
-  context.fillStyle = "yellow";
-  context.strokeStyle = 'none';
-  context.beginPath();
-  context.arc(0, 0, 2, 0, 2 * Math.PI, true);
-  context.fill();
-  context.closePath();
-
 d3.csv("data/results_asteroids_n_pha3.csv", function(error, rows) {
   if (error) throw error;
 
@@ -183,24 +175,18 @@ d3.csv("data/results_asteroids_n_pha3.csv", function(error, rows) {
   var dataBinding = dataContainer.selectAll( "node" )
     .data( rows )
     .enter()
-    .append( "rect" )
-    .attr("id", function(d, i){return d.id})
+    .append( "ellipse" )
+    .attr("id", function(d, i){return d.name})
     .attr("class", function(d, i){return "node " + d.name})
-    .attr("x", function(d, i) { 
-      var E = (+d.M+(180/Math.PI)*d.e*Math.sin(d.M)*(1+d.e*Math.cos(d.M)));
-      var x = d.a*(Math.cos(E)-d.e);
-      return 0 + x*enlarge;
-    })
-    .attr("y", function(d, i) { 
-      var E = (+d.M+(180/Math.PI)*d.e*Math.sin(d.M)*(1+d.e*Math.cos(d.M))); 
-      var y = d.a*Math.sqrt(1-d.e*d.e)*Math.sin(E);
-      return 0 + y*enlarge;
-    })
-    .attr("fill", function(d, i){
+    .attr("cx", w)
+    .attr("cy", h)
+    .attr("rx", function(d, i){return d.a * enlarge } )
+    .attr("ry", function(d, i){return (d.a * Math.sqrt(1-(Math.pow(d.e,2)))) * enlarge } )
+    .attr("stroke", function(d, i){
       if (d.pha === 'Y') {
-        return "red";
+        return "rgba(200,60,70,1)";
       } else {
-        return "rgba(255,255,255,.25)";
+        return "rgba(105,111,196,.25)";
       }
     });
   
@@ -208,10 +194,14 @@ d3.csv("data/results_asteroids_n_pha3.csv", function(error, rows) {
     var node = d3.select(this);
   
     // setTimeout(function () {
-      context.fillStyle = node.attr("fill");
-      context.strokeStyle = "none";
-      context.fillRect( node.attr("x"), node.attr("y"), 1, 1);
-    // }, number++)
+      context.fillStyle = "none";
+      context.strokeStyle = node.attr("stroke");
+      context.lineWidth = 1;
+      context.beginPath();
+      context.ellipse(node.attr("cx"), node.attr("cy"), node.attr("rx"), node.attr("ry"), 0, 0, 2 * Math.PI, true);
+      context.stroke();
+      context.closePath();
+    // }, 2000 + number++)
   });
 
   ready();
@@ -230,96 +220,33 @@ d3.csv("data/planets2.csv", function(error, rows) {
   //   // magnitude: +d.mag;
   // });
 
-  // function calc(d, i) {
-  //  var E = d.M+(180/Math.PI)*d.e*Math.sin(d.M)*(1+d.e*Math.cos(d.M)); 
-  //  var x = d.a*(Math.cos(E)-d.e);
-  //  var y = d.a*Math.sqrt(1-d.e*d.e)*Math.sin(E);
-  // };
-
 
   var dataBinding = dataContainer.selectAll( "node" )
     .data( rows )
     .enter()
     .append( "ellipse" )
-    .attr("id", function(d, i){return d.id})
+    .attr("id", function(d, i){return d.name})
     .attr("class", function(d, i){return "node " + d.name})
-    .attr("cx", function(d, i) { 
-      var E = (+d.M+(180/Math.PI)*d.e*Math.sin(d.M)*(1+d.e*Math.cos(d.M)));
-      var x = d.a*(Math.cos(E)-d.e);
-      return x*enlarge;
-    })
-    .attr("cy", function(d, i) { 
-      var E = (+d.M+(180/Math.PI)*d.e*Math.sin(d.M)*(1+d.e*Math.cos(d.M))); 
-      var y = d.a*Math.sqrt(1-d.e*d.e)*Math.sin(E);
-      return y*enlarge;
-    })
+    .attr("cx", w)
+    .attr("cy", h)
     .attr("rx", function(d, i){return d.a * enlarge } )
     .attr("ry", function(d, i){return (d.a * Math.sqrt(1-(Math.pow(d.e,2)))) * enlarge } );
   
   dataBinding.each(function(d) {
     var node = d3.select(this);
   
-    setTimeout(function () {
+    // setTimeout(function () {
       context.fillStyle = "none";
-      context.strokeStyle = 'rgba(46,210,123,1)';
+      context.strokeStyle = 'rgba(200,60,70,1)';
       context.lineWidth = 2;
       context.beginPath();
-      context.arc(node.attr("cx"), node.attr("cy"), 2, 0, 2 * Math.PI, true);
+      context.ellipse(node.attr("cx"), node.attr("cy"), node.attr("rx"), node.attr("ry"), 0, 0, 2 * Math.PI, true);
       context.stroke();
       context.closePath();
-      context.fillStyle = "none";
-      context.strokeStyle = 'rgba(46,210,123,1)';
-      context.lineWidth = .5;
-      context.beginPath();
-      context.ellipse(0, 0, node.attr("rx"), node.attr("ry"), 0, 0, 2 * Math.PI, true);
-      context.stroke();
-      context.closePath();
-    }, 200)
-
+    // }, number++)
   });
 
-  
-
 });
-
-// d3.csv("data/planets.csv", function(error, rows) {
-//   if (error) throw error;
-
-//   // rows.forEach(function(d) {
-//   //   id: d.id;
-//   //   name: d.name;
-//   //   semimajor_axis: +d.a;
-//   //   eccentricity: +d.e;
-//   //   // magnitude: +d.mag;
-//   // });
-
-
-//   var dataBinding = dataContainer.selectAll( "node" )
-//     .data( rows )
-//     .enter()
-//     .append( "ellipse" )
-//     .attr("id", function(d, i){return d.id})
-//     .attr("class", function(d, i){return "node " + d.name})
-//     .attr("cx", 0)
-//     .attr("cy", 0)
-//     .attr("rx", function(d, i){return d.semimaj * enlarge } )
-//     .attr("ry", function(d, i){return (d.semimaj * Math.sqrt(1-(Math.pow(d.ecc,2)))) * enlarge } );
-  
-//   dataBinding.each(function(d) {
-//     var node = d3.select(this);
-  
-//     setTimeout(function () {
-//       context.fillStyle = "none";
-//       context.strokeStyle = 'rgba(46,210,123,1)';
-//       context.lineWidth = 2;
-//       context.beginPath();
-//       context.ellipse(node.attr("cx"), node.attr("cy"), node.attr("rx"), node.attr("ry"), 0, 0, 2 * Math.PI, true);
-//       context.stroke();
-//       context.closePath();
-//     }, 200)
-//   });
-
-// });
 
 // function counter() {
 //   number++;
@@ -342,7 +269,7 @@ d3.csv("data/planets2.csv", function(error, rows) {
 //   // starsGroup.select(".county-border").style("stroke-width", .5 / d3.event.scale + "px");
 // }
 
-    canvas.style("-webkit-filter", "blur(" + 5 + "px)").style("opacity",.5);
+  canvas.style("-webkit-filter", "blur(" + 5 + "px)").style("opacity",.5);
 
 var returnTimer = 0;
 var returnCountdown = 0;
