--- a/story/007j-test.html
+++ b/story/007j-test.html
@@ -70,7 +70,7 @@
       Pluto is one of many icy objects floating around in the outer reaches of the solar system.
     </p>
     <p style="font-weight:100; margin: 0;">
-      These orbiting points depict all the known 'Trans-Neptunian' objects. Scroll to zoom in and out.
+      These orbiting points depict all the known 'trans-neptunian' objects. Scroll to zoom in and out.
     </p>
     <p style="font-weight:100; margin: 0;">
       <br>
@@ -405,54 +405,63 @@
 
   canvas.style("-webkit-filter", "blur(" + 5 + "px)").style("opacity",.5);
 
-  var returnTimer = 0;
-  var returnCountdown = 0;
-  var returnLink = 0;
-  var returnNotification = d3.select('#return-notification');
+var returnTimer = 0;
+var returnCountdown = 0;
+var returnLink = 0;
+var returnNotification = d3.select('#return-notification');
 
-  document.body.addEventListener('mousemove', resetTimers);
+document.body.addEventListener('mousemove', resetTimers);
 
-  function resetTimers() {
-    clearTimeout(returnTimer);
-    clearInterval(returnCountdown);
-    clearTimeout(returnLink);
-    countdown = 10;
-    returnNotification.transition().duration(500).style("opacity", 0);
-    setTimeout(function() {returnNotification.style("display", "none")}, 500);
-    if (readySetGo) {
-      ready();
-    }
+function resetTimers() {
+  clearTimeout(returnTimer);
+  clearInterval(returnCountdown);
+  clearTimeout(returnLink);
+  countdown = 10;
+  returnNotification.transition().duration(500).style("opacity", 0);
+  setTimeout(function() {returnNotification.style("display", "none")}, 500);
+  if (readySetGo) {
+    ready();
   }
+}
 
-  function ready() {
-    document.getElementById('return-notification-message').innerHTML = "Returning to overview in 10 seconds";
-    d3.select("#loading").transition().duration(500).style("opacity", 0);
-    setTimeout(function() {d3.select("#loading").style("display", "none")}, 500);
-    canvas.transition().delay(0).duration(1000)
-                       .style("-webkit-filter", "blur(" + 0 + "px)")
-                       .style("opacity",1);
-    d3.select("#info").transition().duration(500).style('opacity', 1);
-    returnTimer = setTimeout(returnToHub, 20000);
-  };
+function ready() {
+  document.getElementById('return-notification-message').innerHTML = "Returning to overview in 10 seconds";
+  d3.select("#loading").transition().duration(500).style("opacity", 0);
+  setTimeout(function() {d3.select("#loading").style("display", "none")}, 500);
+  canvas.transition().delay(0).duration(1000)
+                     .style("-webkit-filter", "blur(" + 0 + "px)")
+                     .style("opacity",1);
+  d3.select("#info").transition().duration(500).style('opacity', 1);
+  returnTimer = setTimeout(returnToHub, 20000);
+};
 
-  function returnToHub() {
-    returnNotification.style("display", "block").transition().duration(500)
-                      .style("opacity", 1);
-    canvas.transition().delay(0).duration(10000).ease("linear-in-out")
-                       .style("-webkit-filter", "blur(" + 5 + "px)")
-                       .style("opacity",.2);
-    d3.select("#info").transition().duration(8000).ease("linear-in-out")
-                       .style('opacity', 0);
+function returnToHub() {
+  returnNotification.style("display", "block").transition().duration(500)
+                    .style("opacity", 1);
+  canvas.transition().delay(0).duration(10000).ease("linear-in-out")
+                     .style("-webkit-filter", "blur(" + 5 + "px)")
+                     .style("opacity",.2);
+  d3.select("#info").transition().duration(8000).ease("linear-in-out")
+                     .style('opacity', 0);
 
-    var countdown = 10; 
+  var countdown = 10; 
+  console.log(countdown);
+  returnCountdown = setInterval(function() {
+    countdown = countdown - 1;
+    document.getElementById('return-notification-message').innerHTML = "Returning to overview in " + countdown + " seconds";
     console.log(countdown);
-    returnCountdown = setInterval(function() {
-      countdown = countdown - 1;
-      document.getElementById('return-notification-message').innerHTML = "Returning to overview in " + countdown + " seconds";
-      console.log(countdown);
-    }, 1000)
-    returnLink = setTimeout(function() {window.location.href = "http://antonlecock.github.io/masterproject/hub/";}, 10000)
+  }, 1000)
+  returnLink = setTimeout(function() {returnNow();}, 10000)
+}
+
+function returnNow() {
+  var oldURL = document.referrer;
+  if (oldURL === "http://antonlecock.github.io/masterproject/hub/test.html") {
+    window.history.back();
+  } else {
+    window.location.href = "http://antonlecock.github.io/masterproject/hub/test.html";
   }
+};
 
   </script>
 </body>
