--- a/hub/index.html
+++ b/hub/index.html
@@ -7,25 +7,25 @@
 	    <meta name="description" content="Summary of masterproject by Anton Lecock, 2016.">
 		<link rel="stylesheet" href="css/normalize.css">
 	    <link rel="stylesheet" href="css/reset.css">
-	    <link rel="stylesheet" href="css/test.css">
+	    <link rel="stylesheet" href="css/main.css">
 
 	    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 
 	</head>
 	
 	<body>
-		<!--[if lt IE 7]>
+		<!--[if lt IE 7].>
             <p class="browsehappy  browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+        <![endif].-->
 		
 		<div class="container">
 
 			<div class="list" id="list">
 					
-			<a class="page-link" href="../story/010a.html">
+			<a class="page-link page-link-big" href="../story/010a.html">
 					<h2 class="project-title">Visual, interactive explanations of astronomical phenomena</h2>
 					<div class="page" width="1440px" height="900px">
-					<div class="page-bgimg" style="background-image: url('img/010a.png')"></div>
+					<div class="page-bgimg" style="background-image: url('img/010a-big.png')"></div>
 					<div class="page-text">
 							<p class="page-title"> 
 								All 1,963 confirmed exoplanets.
@@ -45,7 +45,7 @@
 					<div class="page-bgimg" style="background-image: url('img/d3-001.jpg')"></div>
 					<div class="page-text">
 							<p class="page-title"> 
-								Stellar evolution and the<br> Hertzsprung-Russell diagram.
+								Stellar evolution and the<br> Hertzsprung-Russell diagram [001].
 							</p>
 							<p class="page-description">
 								Attempts at an interactive Hertzsprung-Russell diagram, that explains the evolutionary path of stars. 
@@ -62,7 +62,7 @@
 					<div class="page-bgimg" style="background-image: url('img/d3-002.jpg')"></div>
 					<div class="page-text">
 							<p class="page-title"> 
-								Stellar evolution and the<br> Hertzsprung-Russell diagram.
+								Stellar evolution and the<br> Hertzsprung-Russell diagram [002].
 							</p>
 							<p class="page-description">
 								Attempts at an interactive Hertzsprung-Russell diagram, that explains the evolutionary path of stars. 
@@ -79,7 +79,7 @@
 					<div class="page-bgimg" style="background-image: url('img/d3-003.jpg')"></div>
 					<div class="page-text">
 							<p class="page-title"> 
-								Stellar evolution and the<br> Hertzsprung-Russell diagram.
+								Stellar evolution and the<br> Hertzsprung-Russell diagram [003].
 							</p>
 							<p class="page-description">
 								Attempts at an interactive Hertzsprung-Russell diagram, that explains the evolutionary path of stars. 
@@ -96,7 +96,7 @@
 					<div class="page-bgimg" style="background-image: url('img/d3-004.jpg')"></div>
 					<div class="page-text">
 							<p class="page-title"> 
-								Stellar evolution and the<br> Hertzsprung-Russell diagram.
+								Stellar evolution and the<br> Hertzsprung-Russell diagram [004].
 							</p>
 							<p class="page-description">
 								Attempts at an interactive Hertzsprung-Russell diagram, that explains the evolutionary path of stars. 
@@ -113,7 +113,7 @@
 					<div class="page-bgimg" style="background-image: url('img/d3-006.gif')"></div>
 					<div class="page-text">
 							<p class="page-title"> 
-								Stellar evolution and the<br> Hertzsprung-Russell diagram.
+								Stellar evolution and the<br> Hertzsprung-Russell diagram [006].
 							</p>
 							<p class="page-description">
 								Attempts at an interactive Hertzsprung-Russell diagram, that explains the evolutionary path of stars. 
@@ -130,7 +130,7 @@
 					<div class="page-bgimg" style="background-image: url('img/d3-007.gif')"></div>
 					<div class="page-text">
 							<p class="page-title"> 
-								Stellar evolution and the<br> Hertzsprung-Russell diagram.
+								Stellar evolution and the<br> Hertzsprung-Russell diagram [007].
 							</p>
 							<p class="page-description">
 								Attempts at an interactive Hertzsprung-Russell diagram, that explains the evolutionary path of stars. 
@@ -147,7 +147,7 @@
 					<div class="page-bgimg" style="background-image: url('img/d3-008.gif')"></div>
 					<div class="page-text">
 							<p class="page-title"> 
-								Stellar evolution and the<br> Hertzsprung-Russell diagram.
+								Stellar evolution and the<br> Hertzsprung-Russell diagram [008].
 							</p>
 							<p class="page-description">
 								Attempts at an interactive Hertzsprung-Russell diagram, that explains the evolutionary path of stars. 
@@ -164,7 +164,7 @@
 					<div class="page-bgimg" style="background-image: url('img/d3-009.gif')"></div>
 					<div class="page-text">
 							<p class="page-title"> 
-								Stellar evolution and the<br> Hertzsprung-Russell diagram.
+								Stellar evolution and the<br> Hertzsprung-Russell diagram [009].
 							</p>
 							<p class="page-description">
 								Attempts at an interactive Hertzsprung-Russell diagram, that explains the evolutionary path of stars. 
@@ -181,7 +181,7 @@
 					<div class="page-bgimg" style="background-image: url('img/d3-010.gif')"></div>
 					<div class="page-text">
 							<p class="page-title"> 
-								Stellar evolution and the<br> Hertzsprung-Russell diagram.
+								Stellar evolution and the<br> Hertzsprung-Russell diagram [010].
 							</p>
 							<p class="page-description">
 								Attempts at an interactive Hertzsprung-Russell diagram, that explains the evolutionary path of stars. 
@@ -198,7 +198,7 @@
 					<div class="page-bgimg" style="background-image: url('img/d3-011.gif')"></div>
 					<div class="page-text">
 							<p class="page-title"> 
-								Stellar evolution and the<br> Hertzsprung-Russell diagram.
+								Stellar evolution and the<br> Hertzsprung-Russell diagram [011].
 							</p>
 							<p class="page-description">
 								Attempts at an interactive Hertzsprung-Russell diagram, that explains the evolutionary path of stars. 
@@ -215,7 +215,7 @@
 					<div class="page-bgimg" style="background-image: url('img/d3-012.gif')"></div>
 					<div class="page-text">
 							<p class="page-title"> 
-								Stellar evolution and the<br> Hertzsprung-Russell diagram.
+								Stellar evolution and the<br> Hertzsprung-Russell diagram [012].
 							</p>
 							<p class="page-description">
 								Attempts at an interactive Hertzsprung-Russell diagram, that explains the evolutionary path of stars. 
@@ -232,7 +232,7 @@
 					<div class="page-bgimg" style="background-image: url('img/d3-013.gif')"></div>
 					<div class="page-text">
 							<p class="page-title"> 
-								Stellar evolution and the<br> Hertzsprung-Russell diagram.
+								Stellar evolution and the<br> Hertzsprung-Russell diagram [013].
 							</p>
 							<p class="page-description">
 								Attempts at an interactive Hertzsprung-Russell diagram, that explains the evolutionary path of stars. 
@@ -249,7 +249,7 @@
 					<div class="page-bgimg" style="background-image: url('img/d3-014.gif')"></div>
 					<div class="page-text">
 							<p class="page-title"> 
-								Stellar evolution and the<br> Hertzsprung-Russell diagram.
+								Stellar evolution and the<br> Hertzsprung-Russell diagram [014].
 							</p>
 							<p class="page-description">
 								Attempts at an interactive Hertzsprung-Russell diagram, that explains the evolutionary path of stars. 
@@ -266,7 +266,7 @@
 					<div class="page-bgimg" style="background-image: url('img/d3-015.gif')"></div>
 					<div class="page-text">
 							<p class="page-title"> 
-								Stellar evolution and the<br> Hertzsprung-Russell diagram.
+								Stellar evolution and the<br> Hertzsprung-Russell diagram [015].
 							</p>
 							<p class="page-description">
 								Attempts at an interactive Hertzsprung-Russell diagram, that explains the evolutionary path of stars. 
@@ -283,7 +283,7 @@
 					<div class="page-bgimg" style="background-image: url('img/d3-016.gif')"></div>
 					<div class="page-text">
 							<p class="page-title"> 
-								Stellar evolution and the<br> Hertzsprung-Russell diagram.
+								Stellar evolution and the<br> Hertzsprung-Russell diagram [016].
 							</p>
 							<p class="page-description">
 								Attempts at an interactive Hertzsprung-Russell diagram, that explains the evolutionary path of stars. 
@@ -300,7 +300,7 @@
 					<div class="page-bgimg" style="background-image: url('img/d3-017.gif')"></div>
 					<div class="page-text">
 							<p class="page-title"> 
-								Stellar evolution and the<br> Hertzsprung-Russell diagram.
+								Stellar evolution and the<br> Hertzsprung-Russell diagram [017].
 							</p>
 							<p class="page-description">
 								Attempts at an interactive Hertzsprung-Russell diagram, that explains the evolutionary path of stars. 
@@ -317,7 +317,7 @@
 					<div class="page-bgimg" style="background-image: url('img/d3-018.gif')"></div>
 					<div class="page-text">
 							<p class="page-title"> 
-								Stellar evolution and the<br> Hertzsprung-Russell diagram.
+								Stellar evolution and the<br> Hertzsprung-Russell diagram [018].
 							</p>
 							<p class="page-description">
 								Attempts at an interactive Hertzsprung-Russell diagram, that explains the evolutionary path of stars. 
@@ -334,7 +334,7 @@
 					<div class="page-bgimg" style="background-image: url('img/d3-019.gif')"></div>
 					<div class="page-text">
 							<p class="page-title"> 
-								Stellar evolution and the<br> Hertzsprung-Russell diagram.
+								Stellar evolution and the<br> Hertzsprung-Russell diagram [019].
 							</p>
 							<p class="page-description">
 								Attempts at an interactive Hertzsprung-Russell diagram, that explains the evolutionary path of stars. 
@@ -351,7 +351,7 @@
 					<div class="page-bgimg" style="background-image: url('img/d3-020.gif')"></div>
 					<div class="page-text">
 							<p class="page-title"> 
-								Stellar evolution and the<br> Hertzsprung-Russell diagram.
+								Stellar evolution and the<br> Hertzsprung-Russell diagram [020].
 							</p>
 							<p class="page-description">
 								Attempts at an interactive Hertzsprung-Russell diagram, that explains the evolutionary path of stars. 
@@ -368,7 +368,7 @@
 					<div class="page-bgimg" style="background-image: url('img/d3-021.gif')"></div>
 					<div class="page-text">
 							<p class="page-title"> 
-								Stellar evolution and the<br> Hertzsprung-Russell diagram.
+								Stellar evolution and the<br> Hertzsprung-Russell diagram [021].
 							</p>
 							<p class="page-description">
 								Attempts at an interactive Hertzsprung-Russell diagram, that explains the evolutionary path of stars. 
@@ -385,7 +385,7 @@
 					<div class="page-bgimg" style="background-image: url('img/d3-022.gif')"></div>
 					<div class="page-text">
 							<p class="page-title"> 
-								Stellar evolution and the<br> Hertzsprung-Russell diagram.
+								Stellar evolution and the<br> Hertzsprung-Russell diagram [022].
 							</p>
 							<p class="page-description">
 								Attempts at an interactive Hertzsprung-Russell diagram, that explains the evolutionary path of stars. 
@@ -402,7 +402,7 @@
 					<div class="page-bgimg" style="background-image: url('img/d3-023.gif')"></div>
 					<div class="page-text">
 							<p class="page-title"> 
-								Stellar evolution and the<br> Hertzsprung-Russell diagram.
+								Stellar evolution and the<br> Hertzsprung-Russell diagram [023].
 							</p>
 							<p class="page-description">
 								Attempts at an interactive Hertzsprung-Russell diagram, that explains the evolutionary path of stars. 
@@ -419,7 +419,7 @@
 					<div class="page-bgimg" style="background-image: url('img/d3-024.gif')"></div>
 					<div class="page-text">
 							<p class="page-title"> 
-								Stellar evolution and the<br> Hertzsprung-Russell diagram.
+								Stellar evolution and the<br> Hertzsprung-Russell diagram [024].
 							</p>
 							<p class="page-description">
 								Attempts at an interactive Hertzsprung-Russell diagram, that explains the evolutionary path of stars. 
@@ -436,7 +436,7 @@
 					<div class="page-bgimg" style="background-image: url('img/d3-025.gif')"></div>
 					<div class="page-text">
 							<p class="page-title"> 
-								Stellar evolution and the<br> Hertzsprung-Russell diagram.
+								Stellar evolution and the<br> Hertzsprung-Russell diagram [025].
 							</p>
 							<p class="page-description">
 								Attempts at an interactive Hertzsprung-Russell diagram, that explains the evolutionary path of stars. 
@@ -453,7 +453,7 @@
 					<div class="page-bgimg" style="background-image: url('img/004b.gif')"></div>
 					<div class="page-text">
 							<p class="page-title"> 
-								Stellar evolution and the<br> Hertzsprung-Russell diagram.
+								Stellar evolution and the<br> Hertzsprung-Russell diagram [026].
 							</p>
 							<p class="page-description">
 								Attempts at an interactive Hertzsprung-Russell diagram, that explains the evolutionary path of stars. 
@@ -470,7 +470,7 @@
 					<div class="page-bgimg" style="background-image: url('img/004d.gif')"></div>
 					<div class="page-text">
 							<p class="page-title"> 
-								Stellar evolution and the<br> Hertzsprung-Russell diagram.
+								Stellar evolution and the<br> Hertzsprung-Russell diagram [027].
 							</p>
 							<p class="page-description">
 								Attempts at an interactive Hertzsprung-Russell diagram, that explains the evolutionary path of stars. 
@@ -487,7 +487,25 @@
 					<div class="page-bgimg" style="background-image: url('img/004e.gif')"></div>
 					<div class="page-text">
 							<p class="page-title"> 
-								Stellar evolution and the<br> Hertzsprung-Russell diagram.
+								Stellar evolution and the<br> Hertzsprung-Russell diagram [028].
+							</p>
+							<p class="page-description">
+								Attempts at an interactive Hertzsprung-Russell diagram, that explains the evolutionary path of stars. 
+							</p>
+							<p class="page-goto">
+								Go to visualisation
+							</p>
+						</div>
+					</div>
+				</a>
+
+				<a class="page-link page-link-big" href="../D3-020.html">
+					<h2 class="project-title">Visual, interactive explanations of astronomical phenomena</h2> 
+					<div class="page">
+					<div class="page-bgimg" style="background-image: url('img/d3-020-big.png')"></div>
+					<div class="page-text">
+							<p class="page-title"> 
+								Stellar evolution and the<br> Hertzsprung-Russell diagram [final].
 							</p>
 							<p class="page-description">
 								Attempts at an interactive Hertzsprung-Russell diagram, that explains the evolutionary path of stars. 
@@ -1315,10 +1333,10 @@
 					</div>
 				</a>
 
-				<a class="page-link" href="../story/010a.html">
+				<a class="page-link-big" href="../story/010a.html">
 					<h2 class="project-title">Visual, interactive explanations of astronomical phenomena</h2>
 					<div class="page" width="1440px" height="900px">
-					<div class="page-bgimg" style="background-image: url('img/010a.png')"></div>
+					<div class="page-bgimg" style="background-image: url('img/010a-big.png')"></div>
 					<div class="page-text">
 							<p class="page-title"> 
 								Exoplanets
